# fourier-laplace

./: README.md  pyproject.toml  setup.py  test.py
src/: __init__.py  drawer.py  estimate.c  estimate.pyx
src/fourier_laplace/: drawer.py  estimate.py
src/fourier_laplace/tables/: P_data.csv  b_data.csv  max_x_data.csv
src/tables/: a_data.csv
