# pyproject.toml

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "fourier_laplace"
version = "1.0.0"
description = "A method of quickly calculating point maps of axis-symmetric drops."
readme = "README.md"
authors = [{ name = "Andres Hyer", email = "andreshyer@gmail.com" }]
license = { file = "GNU General Public License v3 (GPLv3)" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.0.0"
]
requires-python = ">=3.0"
include = ["src/fourier_laplace/tables/*.csv"]

[project.urls]
Homepage = "https://github.com/andreshyer/fourier-laplace.git"

